--- a/registrate.html
+++ b/registrate.html
@@ -20,16 +20,16 @@
   	<div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav ml-auto mb-3">
       <li class="nav-item ">
-        <a class="nav-link" href="file:///D:/Dise%C3%B1o%20de%20interfaces/TrabajoFinal/index.html#">Inicio</a>
+        <a class="nav-link" href="../TrabajoFinal/index.html">Inicio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="file:///D:/Dise%C3%B1o%20de%20interfaces/TrabajoFinal/videos.html#">Videos</a>
+        <a class="nav-link" href="../TrabajoFinal/videos.html">Videos</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://romanimartin.blogspot.com/" target="_blank">Blog</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="file:///D:/Dise%C3%B1o%20de%20interfaces/TrabajoFinal/registrate.html#">Registrate</a>
+        <a class="nav-link" href="../TrabajoFinal/registrate.html">Registrate</a>
       </li>
     </ul>
   	</div>
